@@ -3,15 +3,13 @@ TO DO
 + before 4.0pre8:
 
 - fix stylesheet problem
-- non-jeditresource: and file: links in help viewer
 
-+ before 4.0pre9:
++ before 4.0final (or pre9?):
 
 - investigate I/O threads
 - aiob in findMatchingBracket() -- offset >= seg.offset+seg.count? or
   offset == -1?
 - scroll to caret _still_ jumps around
-
 - proofread documentation one more time
 - make sure plugin guide is up to date
 - API guide: compareStrings(), showPopupMenu()
